[gd_scene load_steps=13 format=3 uid="uid://chdo5cktpnf8u"]

[ext_resource type="Texture2D" uid="uid://c12l72fh8a3cj" path="res://Assets/Desert_Dungeon_Pack/Tileset_Dungeon.png" id="1_77efa"]
[ext_resource type="Script" uid="uid://boyjb2lu0yxrj" path="res://Cenas/vidro_round_6.gd" id="1_fhhku"]
[ext_resource type="PackedScene" uid="uid://di2y0wbeuqb53" path="res://Cenas/carol.tscn" id="2_pf7vs"]
[ext_resource type="PackedScene" uid="uid://d3jkc0pqmw4x0" path="res://Cenas/jose.tscn" id="3_pf7vs"]
[ext_resource type="PackedScene" uid="uid://breq08thlbxv7" path="res://piso.tscn" id="5_grsvf"]
[ext_resource type="PackedScene" uid="uid://dj7mvlgmfwhb2" path="res://hud_vidro.tscn" id="6_6h80e"]
[ext_resource type="PackedScene" uid="uid://daanfvvtqyuyr" path="res://huf_vidroC.tscn" id="7_5pa74"]
[ext_resource type="PackedScene" uid="uid://dufkhhevbgc4p" path="res://lava.tscn" id="8_y8ht4"]
[ext_resource type="PackedScene" uid="uid://wqwpq3042hjj" path="res://hud_tempo.tscn" id="9_oa68q"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fhhku"]
texture = ExtResource("1_77efa")
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
7:1/0 = 0
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
7:2/0 = 0
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
7:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
17:4/0 = 0
18:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
24:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
17:5/0 = 0
18:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
6:6/0 = 0
7:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
13:6/0 = 0
14:6/0 = 0
17:6/0 = 0
18:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
6:7/0 = 0
7:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
11:2/0 = 0

[sub_resource type="TileSet" id="TileSet_grsvf"]
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_fhhku")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pf7vs"]
size = Vector2(33, 33)

[node name="vidro_round6" type="Node"]
script = ExtResource("1_fhhku")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray(0, 0, 33, 0, 26, 0, 0, 0, 10, 0, 2, 0, 0, 0, 32, 0, 25, 0, 0, 0, 9, 0, 1, 0, 0, 0, 32, 0, 26, 0, 0, 0, 9, 0, 2, 0, 0, 0, 33, 0, 25, 0, 0, 0, 10, 0, 1, 0, 0, 0)
tile_set = SubResource("TileSet_grsvf")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(528, 416)

[node name="Inicio" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_pf7vs")

[node name="piso" parent="." instance=ExtResource("5_grsvf")]
position = Vector2(255, 106)

[node name="piso2" parent="." instance=ExtResource("5_grsvf")]
position = Vector2(464, 103)
scale = Vector2(1.01933, 0.994624)

[node name="piso3" parent="." instance=ExtResource("5_grsvf")]
position = Vector2(261, 1)

[node name="piso4" parent="." instance=ExtResource("5_grsvf")]
position = Vector2(468, 3)

[node name="round2" type="Node2D" parent="."]
position = Vector2(420, 173)
scale = Vector2(0.805572, 1.05505)

[node name="round2_" type="Label" parent="round2"]
visible = false
offset_left = 11.0
offset_top = 5.0
offset_right = 73.0
offset_bottom = 28.0
text = "7 x 3 x 2"

[node name="round2_4" type="Label" parent="round2"]
visible = false
offset_left = 5.0
offset_top = 109.0
offset_right = 67.0
offset_bottom = 132.0
text = "4 x 6 x 3"

[node name="round2_2" type="Label" parent="round2"]
visible = false
offset_left = 210.0
offset_top = 5.0
offset_right = 298.0
offset_bottom = 28.0
text = "6 x 8 x 4"

[node name="round2_3" type="Label" parent="round2"]
visible = false
offset_left = 215.0
offset_top = 105.0
offset_right = 303.0
offset_bottom = 128.0
text = "5 x 9 x 4"

[node name="round1_" type="Label" parent="."]
offset_left = 619.0
offset_top = 278.0
offset_right = 719.0
offset_bottom = 327.0
text = "20 - 10 + 3 - 2
"

[node name="round1_2" type="Label" parent="."]
offset_left = 414.0
offset_top = 282.0
offset_right = 514.0
offset_bottom = 331.0
text = "6 + 4 + 3 -1 "

[node name="round1_3" type="Label" parent="."]
offset_left = 623.0
offset_top = 177.0
offset_right = 714.0
offset_bottom = 226.0
text = "15 - 5 + 6 - 2
"

[node name="round1_4" type="Label" parent="."]
offset_left = 410.0
offset_top = 178.0
offset_right = 505.0
offset_bottom = 201.0
text = "8 + 6 + 3 - 10"

[node name="piso6" parent="." instance=ExtResource("5_grsvf")]
visible = false
position = Vector2(253, 54)

[node name="piso7" parent="." instance=ExtResource("5_grsvf")]
visible = false
position = Vector2(473, 54)

[node name="piso8" parent="." instance=ExtResource("5_grsvf")]
visible = false
position = Vector2(249, 165)

[node name="piso9" parent="." instance=ExtResource("5_grsvf")]
visible = false
position = Vector2(465, 170)

[node name="piso10" parent="." instance=ExtResource("5_grsvf")]
visible = false
position = Vector2(470, -90)

[node name="piso11" parent="." instance=ExtResource("5_grsvf")]
visible = false
position = Vector2(463, -100)

[node name="round3" type="Node2D" parent="."]
visible = false

[node name="Label" type="Label" parent="round3"]
offset_left = 443.0
offset_top = 347.0
offset_right = 483.0
offset_bottom = 396.0
text = "10

"

[node name="Label2" type="Label" parent="round3"]
offset_left = 659.0
offset_top = 82.0
offset_right = 699.0
offset_bottom = 157.0
text = "17

"

[node name="Label3" type="Label" parent="round3"]
offset_left = 447.0
offset_top = 231.0
offset_right = 487.0
offset_bottom = 306.0
text = "13



"

[node name="Label4" type="Label" parent="round3"]
offset_left = 444.0
offset_top = 77.0
offset_right = 484.0
offset_bottom = 230.0
text = "8




"

[node name="Label5" type="Label" parent="round3"]
offset_left = 662.0
offset_top = 231.0
offset_right = 702.0
offset_bottom = 384.0
text = "12





"

[node name="Label6" type="Label" parent="round3"]
offset_left = 655.0
offset_top = 345.0
offset_right = 695.0
offset_bottom = 524.0
text = "15






"

[node name="hud_vidro" parent="." instance=ExtResource("6_6h80e")]
visible = false

[node name="Button" type="Button" parent="."]
offset_left = 103.0
offset_top = 396.0
offset_right = 165.0
offset_bottom = 425.0
text = "SKIP
"

[node name="hud_carol" parent="." instance=ExtResource("7_5pa74")]
visible = false

[node name="Button2" type="Button" parent="."]
offset_left = 101.0
offset_top = 442.0
offset_right = 172.0
offset_bottom = 473.0
text = "RELOAD
"

[node name="Node2D" type="Node2D" parent="."]

[node name="piso_lava" parent="Node2D" instance=ExtResource("5_grsvf")]
position = Vector2(470, 232)

[node name="piso_lava2" parent="Node2D" instance=ExtResource("5_grsvf")]
position = Vector2(189, 224)

[node name="lava" parent="." instance=ExtResource("8_y8ht4")]
visible = false
position = Vector2(-10, -44)

[node name="Jose" parent="." instance=ExtResource("3_pf7vs")]
position = Vector2(313, 265)

[node name="Label" type="Label" parent="Jose"]
visible = false
offset_left = 427.0
offset_top = 196.0
offset_right = 467.0
offset_bottom = 245.0
text = "7
"

[node name="Label2" type="Label" parent="Jose"]
visible = false
offset_left = 427.0
offset_top = 196.0
offset_right = 467.0
offset_bottom = 245.0
text = "192


"

[node name="Label3" type="Label" parent="Jose"]
visible = false
offset_left = 425.0
offset_top = 228.0
offset_right = 465.0
offset_bottom = 277.0
text = "35
"

[node name="carol" parent="." instance=ExtResource("2_pf7vs")]
position = Vector2(236, 312)
scale = Vector2(1.0398, 1.01668)
collision_mask = 2

[node name="Label" type="Label" parent="carol"]
visible = false
offset_left = 175.0
offset_top = 143.0
offset_right = 215.0
offset_bottom = 166.0
text = "11
"

[node name="Label2" type="Label" parent="carol"]
visible = false
offset_left = 175.0
offset_top = 143.0
offset_right = 215.0
offset_bottom = 166.0
text = "72

"

[node name="Label3" type="Label" parent="carol"]
visible = false
offset_left = 181.766
offset_top = 179.998
offset_right = 221.766
offset_bottom = 254.998
text = "40

"

[node name="hudTempo" parent="." instance=ExtResource("9_oa68q")]

[node name="timerHud" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="piso" to="." method="_on_piso_body_entered"]
[connection signal="body_entered" from="piso2" to="." method="_on_piso_2_body_entered"]
[connection signal="body_entered" from="piso3" to="." method="_on_piso_3_body_entered"]
[connection signal="body_entered" from="piso4" to="." method="_on_piso_4_body_entered"]
[connection signal="body_entered" from="piso6" to="." method="_on_piso_6_body_entered"]
[connection signal="body_entered" from="piso7" to="." method="_on_piso_7_body_entered"]
[connection signal="body_entered" from="piso8" to="." method="_on_piso_8_body_entered"]
[connection signal="body_entered" from="piso9" to="." method="_on_piso_9_body_entered"]
[connection signal="body_entered" from="piso10" to="." method="_on_piso_10_body_entered"]
[connection signal="body_entered" from="piso11" to="." method="_on_piso_11_body_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="body_entered" from="Node2D/piso_lava" to="." method="_on_piso_lava_body_entered"]
[connection signal="body_exited" from="Node2D/piso_lava" to="." method="_on_piso_lava_body_exited"]
[connection signal="body_entered" from="Node2D/piso_lava2" to="." method="_on_piso_lava_2_body_entered"]
[connection signal="body_exited" from="Node2D/piso_lava2" to="." method="_on_piso_lava_2_body_exited"]
[connection signal="dor" from="Jose" to="." method="_on_jose_dor"]
[connection signal="timeout" from="timerHud" to="." method="_on_timer_hud_timeout"]
